--- a/source_code/_layouts/base.html
+++ b/source_code/_layouts/base.html
@@ -3,7 +3,7 @@
 <head>
   {% include header.html %}
 </head>
-<body oncontextmenu='return false' ondragstart='return false' onselectstart ='return false' onselect='document.selection.empty()' oncopy='document.selection.empty()' onbeforecopy='return false' onmouseup='document.selection.empty()'>
+<body>
   <div class="container">
     <div class="row">
       {% include navside.html %}
